Bugfix enable FlightStreamPlugin.
FlightStreamPlugin returns FlightService as AuxTransport as well as
createComponents. Both references attempt to bind to
FlightService.class and throws an exception. Removing redundant
createComponents instance.

Signed-off-by: Finn Carroll <carrofin@amazon.com>