@@ -115,7 +115,7 @@ public class FlightStreamPlugin extends Plugin
         flightService.setClusterService(clusterService);
         flightService.setThreadPool(threadPool);
         flightService.setClient(client);
-        return List.of(flightService);
+        return Collections.emptyList();
     }
 
     /**
